# LiteEMF

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-en.md  README.md  emf_config.h  emf_typedef.h  hw_board.h  hw_config.h  template.c  template.h  用户手册.md
api/: Makefile  api_adc.c  api_adc.h  api_commander.c  api_commander.h  api_commander.md  api_flash.c  api_flash.h  api_gpio.c  api_gpio.h  api_iic.c  api_iic.h  api_iic_host.c  api_iic_host.h  api_log.c  api_log.h  api_os_timer.c  api_os_timer.h  api_pm.c  api_pm.h  api_pwm.c  api_pwm.h  api_soft_spi.c  api_soft_spi.h  api_soft_timer.c  api_soft_timer.h  api_spi.c  api_spi.h  api_spi_host.c  api_spi_host.h  api_storage.c  api_storage.h  api_system.c  api_system.h  api_tick.c  api_tick.h  api_timer.c  api_timer.h  api_transport.c  api_transport.h  (+6 more)
app/: Makefile  app_LRAtactile.c  app_LRAtactile.h  app_battery.c  app_battery.h  app_bt.c  app_bt.h  app_command.c  app_command.h  app_commander.c  app_commander.h  app_commander.md  app_infr.c  app_infr.h  app_joystick.c  app_joystick.h  app_key.c  app_key.h  app_km.c  app_km.h  app_led.c  app_led.h  app_pm.c  app_pm.h  app_rgb.c  app_rgb.h  app_rumble.c  app_rumble.h  app_soft_timer.c  app_soft_timer.h  battery_cure.xlsx  bt_typedef.h  drv2605.c  drv2605.h  emf.c  emf.h  io_key.c  io_key.h  io_keyboard.c  io_keyboard.h  (+2 more)
hal/: Makefile  (+40 more)
unit-test/: CMakeLists.txt  api_commander_test.c  api_soft_timer_test.c  app_rgb_test.c  app_soft_timer_test.c  crc_test.c  hid_desc_parser_test.c  list_test.c  mem_test.c  simple.pb.c  simple.pb.h  simplepb_test.c  unit_test.h
(+309 files in other folders)
